tests/compile-fail/report_where_clause.stderr
error: #[report] does not support where clauses.
  --> tests/compile-fail/report_where_clause.rs:13:1
   |
13 | where
   | ^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/compile-fail/report_where_clause.rs:17:2
   |
17 | }
   |  ^ consider adding a `main` function to `$DIR/tests/compile-fail/report_where_clause.rs`
